@@ -20,6 +20,41 @@ group { name: "elm/notify/block_events/popup";
    }
 }
 
+group { name: "elm/notify/block_events/transparent";
+   parts {
+      part { name: "block_events";
+         type: RECT;
+         description { state: "default" 0.0;
+            color: 0 0 0 0;
+         }
+         description { state: "clicked" 0.0;
+            color: 0 0 0 50;
+         }
+      }
+   }
+   programs {
+      program { name: "block_clicked";
+         signal: "mouse,clicked,1";
+         source: "block_events";
+         action: SIGNAL_EMIT "elm,action,click" "elm";
+         after: "deeper_block_color";
+      }
+      program {
+         name: "deeper_block_color";
+         action: STATE_SET "clicked" 0.0;
+         target: "block_events";
+         transition: LINEAR 0.2;
+         after: "default_block_color";
+      }
+      program {
+         name: "default_block_color";
+         action: STATE_SET "default" 0.0;
+         target: "block_events";
+         transition: LINEAR 0.2;
+      }
+   }
+}
+
 group { name: "elm/label/base/popup/default";
    styles
      {
